--- a/package.json
+++ b/package.json
@@ -9,16 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.19.1",
     "@types/node": "22.0.0",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
     "autoprefixer": "10.4.19",
+    "bcrypt": "^5.1.1",
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.5",
     "fast-sort": "^3.4.1",
     "next": "14.2.5",
+    "next-auth": "^4.24.11",
     "next-cloudinary": "^6.13.0",
+    "openssl": "^2.0.0",
     "postcss": "8.4.40",
     "prisma": "^5.19.1",
     "react": "18.3.1",
@@ -28,6 +32,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "daisyui": "^4.12.10"
   }
 }
