--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.10.0",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.19.1",
     "@types/node": "22.0.0",
@@ -27,8 +28,10 @@
     "prisma": "^5.19.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-hook-form": "^7.54.2",
     "tailwindcss": "3.4.7",
     "typescript": "5.5.4",
+    "yup": "^1.6.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
